<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/about_header">

        <Preference
            app:summary="https://github.com/trojan-gfw/igniter"
            app:title="@string/project_page" />
        <Preference
            app:summary="Trojan-GFW"
            app:title="@string/author_title" />
        <Preference
            app:summary="GPLv3"
            app:title="@string/project_license" />
        <Preference
            app:summary="@string/versionName"
            app:title="@string/version_title" />


    </PreferenceCategory>

    <PreferenceCategory app:title="@string/credits_header">

        <Preference
            app:summary="https://github.com/Dreamacro/clash"
            app:title="@string/credit_item1_title" />

        <Preference
            app:summary="https://github.com/eycorsican/go-tun2socks"
            app:title="@string/credit_item2_title" />

        <Preference
            app:summary="https://github.com/bingoogolapple/BGAQRCode-Android"
            app:title="@string/credit_item3_title" />

    </PreferenceCategory>

</PreferenceScreen>
