<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_view_server_list"
        android:orderInCategory="100"
        android:title="@string/main_menu_server_list"
        app:showAsAction="never" />

    <item android:id="@+id/action_exempt_app"
        android:title="@string/menu_action_exempt_app"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_test_connection"
        android:orderInCategory="100"
        android:title="@string/action_test_connection"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_show_develop_info_logcat"
        android:orderInCategory="100"
        android:title="@string/action_show_develop_info_logcat"
        app:showAsAction="never" />
</menu>