<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:theme="@style/ThemeOverlay.MaterialComponents.Dialog">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/subscribeInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/subscribeLinkUrlTiet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/server_list_subscribe_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/subscribeSettingCancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/common_cancel"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/subscribeSettingConfirmBtn"
        app:layout_constraintEnd_toStartOf="@+id/subscribeSettingConfirmBtn"
        app:layout_constraintTop_toTopOf="@+id/subscribeSettingConfirmBtn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/subscribeSettingConfirmBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/common_confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subscribeInputLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>